assets/styles/app.css
* {
    box-sizing: border-box;
  }
  
  html {
    font-family: sans-serif;
  }
  
  body {
    margin: 0;
  }
.card {
    padding: 1rem;
    border-radius: 10px;
    /* box-shadow: [h-offset] [v-offset] [blur-radius] [spread-radius] [color]; */
    box-shadow: 0px 2px 8px 3px rgba(0, 0, 0, 0.26);
    margin-top: 1rem;
    max-width: 650px;
    /* width: auto; */
  }
  .control {
      margin: 1rem;
  }
  .inline-controls {
    display: flex;
  }
  button {
      font:inherit;
      border: 1px solid #1a4ea1;
      color: white;
      padding: 1rem 2rem;
      border-radius: 5px;
      background-color: #1a4ea1;
      cursor: pointer;
      width: 30%;
      max-width: 40%;
      min-width: 15%;
  }
  button:focus {
      outline: none;
  }
  button:hover,
  button:active {
    background: #315692;
    border-color: #1a4ea1;
  }
  label {
    font-weight: bold;
    display: block;
    color: #494949;
  }

  input {
      font: inherit;
      border: none;
      border-bottom: 2px solid #ccc;
      color:#494949;
      width: 100%;
      display: block;
      margin: 1rem 0;

  }

  /* focus just works like onclick even */
  input:focus {
      outline: none;
      border-color: #1a4ea1;
  }

#user-input,
#filter {
  width: 50rem;
  max-width: 90%;
  min-width: 20%;
  margin: 2rem;

  padding: 1rem;
    border-radius: 10px;
    /* box-shadow: [h-offset] [v-offset] [blur-radius] [spread-radius] [color]; */
    box-shadow: 0px 2px 8px 1px rgba(0, 0, 0, 0.26);
}

ul {
    list-style-type: none;
}
.first-container {
    display: flex;
    padding: 1rem;
    border-radius: 10px;
    
}
.picture-div {
    width: fit-content;
    height: fit-content;
    box-shadow: 0px 2px 8px 1px rgba(0, 0, 0, 0.26);
    border-radius: 0.5rem;
}
.image-itm {
    height: 300px;
    height: 300px;
    border-radius: 0.5rem;
    padding: 3px;
}
#h2 {
    max-width: 90%;

    padding: 1rem;
    margin-top: 3rem;
    text-align: center;
    font-size: 30px;
    color: #0d0a42e8;
}
p {
    margin: 1rem 3rem;
    font-family: sans-serif;
    color: #0d0a42e8;
    padding: 1rem;
    font-weight: bold;
    text-align: center;
    border-radius: 1rem;
    box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, 0.26);
    background-color: rgb(76, 133, 187);
}




/*---Media Queries --*/
@media (max-width: 1200px) {
    .card{
        width: 520px;
    }
    #h2 {
        font-size: 20px;
    }
    .image-itm {
        height: 270px;
        height: 270px;
    }
}
@media (max-width: 992px) {
    #h2 {
        font-size: 24px;
    }
    .card{
        width: 650px;
    }

}
@media (max-width: 768px) {
    #h2 {
        font-size: 20px;
    }
    .card{
        width: 500px;
    }
    .image-itm {
        height: 230px;
        height: 230px;
    }
}
@media (max-width: 576px) {
    #h2 {
        font-size: 17px;
        margin-top: 1rem;
    }
    .card{
        width: 335px;
    }
    .image-itm {
        height: 150px;
        height: 150px;
    }
    p {
        font-size: small;
        margin: 1rem 1rem;
        padding: 0rem;
    }
    
    #user-input,
    #filter {
    margin-left: 2rem;
    }
}
/* 
@media (max-width: 407px) {
    /* .card{
        width: 100px;
    } 
    .image-itm{
        height: 100px;
        width: 100px;
    }
}
   */
  

  
  /* --- Bootstrap Padding Fix --
  [class*="col-"] {
      padding: 1rem;
  } */

  

